[package]
name = "tmv"
version = "0.1.0"
edition = "2021"

[lib]
name = "tmv"
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1.0.69"
serde = { version = "1.0.152", features = [ "derive" ] }
serde_json = "1.0.92"
ts-rs = { git = "https://github.com/petersn/ts-rs", branch = "optional-changes" }
rand = "0.8.5"
getrandom = { version = "0.2.8", features = [ "js" ] }
rapier2d = { version = "0.17.1", features = [ "wasm-bindgen" ] }
tiled = { git = "https://github.com/petersn/rs-tiled", default-features = false }
js-sys = "0.3.60"
strum = "0.24.1"
strum_macros = "0.24.3"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
serde-wasm-bindgen = "0.4.5"
console_error_panic_hook = "0.1.7"
crossbeam = "0.8.2"

[dependencies.web-sys]
version = "0.3.61"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlImageElement',
  'Window',
]

[profile.dev.package.rapier2d]
opt-level = 3

